# web-of-web-trust-backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker.sh  graph.md  schema.yml  sqlx-data.json  todo.md
config/: base.toml  development.toml  docker.toml
migrations/: 20211111210010_create_domain_table.sql  20211111211733_create_ruegen_table.sql  20211111211950_create_ruegen_domains_table.sql  20211112174840_add_domain_network.sql  20211112193407_create_domain_link.sql
src/: core.rs  domains.rs  main.rs  ruegen.rs
src/core/: config.rs  errors.rs  routes.rs  types.rs
src/db/: models.rs  util.rs
src/domains/: graph.rs  requests.rs  responses.rs  routes.rs
src/domains/graph/: acg.rs  awg.rs  vertex.rs
src/ruegen/: requests.rs  responses.rs  routes.rs
