[package]
name = "web-of-trust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if exporting to jaeger, use the `tokio` feature.
opentelemetry-jaeger = { version = "*", features = ["rt-tokio-current-thread"] }
actix-web-opentelemetry = { git = "https://github.com/OutThereLabs/actix-web-opentelemetry.git", features = [
    "metrics",
    "prometheus",
] }
actix-web = { version = "4.0.0-beta.10", default-features = false, features = [
    "compress-zstd",
] }
opentelemetry = { version = "0.16", default-features = false, features = [
    "trace",
    "metrics",
    "rt-tokio-current-thread",
] }
opentelemetry-prometheus = { version = "0.9" }
opentelemetry-semantic-conventions = "0.8"
serde = "1.0"
paperclip = { version = "0.6", features = ["actix"] }
