[package]
name = "web-of-trust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# if exporting to jaeger, use the `tokio` feature.
actix-web = { version = "4.0.0-beta.10", default-features = false, features = [
    "compress-zstd",
] }
actix-web-opentelemetry = { git = "https://github.com/OutThereLabs/actix-web-opentelemetry.git", features = [
    "metrics",
    "prometheus",
] }
blake3 = "1"
config = "0.11"
lazy_static = "1.4"
opentelemetry = { version = "0.16", default-features = false, features = [
    "trace",
    "metrics",
    "rt-tokio-current-thread",
] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio-current-thread"] }
opentelemetry-prometheus = { version = "0.9" }
opentelemetry-semantic-conventions = "0.8"
regex = "1"
serde = "1"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-opentelemetry = "*"
tracing = "*"
sqlx = { version = "0.5", features = [
    "runtime-actix-rustls",
    "offline",
    "postgres"
] }
